[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imgconvert"
version = "0.2.1"
dependencies = ["click", "Pillow", "pillow-heif", "rawpy", "numpy"]

[project.scripts]
imgconvert = "script:main"

[tool.setuptools]
py-modules = ["script", "analyze", "utils"]